fix bug with word wrap

--- a/assets/scss/site/layout.scss
+++ b/assets/scss/site/layout.scss
@@ -1,9 +1,9 @@
 body {
-	font-size: 100%;
+  word-wrap: break-word;
 }
 
 /**
- * Header blog 
+ * Header blog
  */
 
 .main-header {
