--- a/assets/scss/site/start.scss
+++ b/assets/scss/site/start.scss
@@ -157,6 +157,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 body {
     font-family: $bodyFont;
+    font-size: 100%;
 }
 
 h1, h2, h3,
